--- a/ios/WeFX.xcodeproj/xcshareddata/xcschemes/WeFX.xcscheme
+++ b/ios/WeFX.xcodeproj/xcshareddata/xcschemes/WeFX.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Boilerplate.app"
-               BlueprintName = "Boilerplate"
-               ReferencedContainer = "container:Boilerplate.xcodeproj">
+               BuildableName = "WeFX.app"
+               BlueprintName = "WeFX"
+               ReferencedContainer = "container:WeFX.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BoilerplateTests.xctest"
-               BlueprintName = "BoilerplateTests"
-               ReferencedContainer = "container:Boilerplate.xcodeproj">
+               BuildableName = "WeFXTests.xctest"
+               BlueprintName = "WeFXTests"
+               ReferencedContainer = "container:WeFX.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BoilerplateTests.xctest"
-               BlueprintName = "BoilerplateTests"
-               ReferencedContainer = "container:Boilerplate.xcodeproj">
+               BuildableName = "WeFXTests.xctest"
+               BlueprintName = "WeFXTests"
+               ReferencedContainer = "container:WeFX.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Boilerplate.app"
-            BlueprintName = "Boilerplate"
-            ReferencedContainer = "container:Boilerplate.xcodeproj">
+            BuildableName = "WeFX.app"
+            BlueprintName = "WeFX"
+            ReferencedContainer = "container:WeFX.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Boilerplate.app"
-            BlueprintName = "Boilerplate"
-            ReferencedContainer = "container:Boilerplate.xcodeproj">
+            BuildableName = "WeFX.app"
+            BlueprintName = "WeFX"
+            ReferencedContainer = "container:WeFX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Boilerplate.app"
-            BlueprintName = "Boilerplate"
-            ReferencedContainer = "container:Boilerplate.xcodeproj">
+            BuildableName = "WeFX.app"
+            BlueprintName = "WeFX"
+            ReferencedContainer = "container:WeFX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
