--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.6.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
